removed peer.class from git stage; encoding fileId with last modified date also